--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-js-hw-08",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://valeryLi.github.io/goit-js-hw-08",
+  "homepage": "https://github.com/valeryLi/goit-js-hw-08",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /valeryLi/"
